<resources>
    <string name="app_name">focusproject</string>

    <string name="typeNotSet">"Not set</string>
    <string name="your_customized_workout">Your customized workout</string>
    <string name="is_rest_time">is rest time</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="equipment_needed">Equipment Needed</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="gif_url">Gif URL</string>
    <string name="media_content">Media Content</string>
    <string name="youtube_link">Youtube Link</string>
    <string name="repetition">REPETITION</string>
    <string name="weight_one_rep_max">WEIGHT ONE REP-MAX</string>
    <string name="duration">DURATION</string>
    <string name="change_duration">Change duration</string>
    <string name="rest_time">REST TIME</string>
    <string name="decrease_repetition_button">decrease repetition button</string>
    <string name="increase_repetition_button">Increase Repetition Button</string>
    <string name="decrease_weight_button">Decrease Weight Button</string>
    <string name="increase_weight_butotn">Increase Weight Butotn</string>
    <string name="newFeedFragmentTag">newfeedfragment</string>
    <string name="noresultfound">No Result Found!</string>
    <string name="searchresult">Search Result</string>
    <string name="yourfriends">Your Friends</string>
    <string name="close_window">Close Window</string>
    <string name="create_your_routine">CREATE YOUR ROUTINE</string>
    <string name="new_routine_name">New Routine Name</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome">Welcome </string>
    <string name="loading">LOADING...</string>
    <string name="total_exercises">Total Exercises</string>
    <string name="start_workout">START WORKOUT</string>
    <string name="copy_current_routine">Copy Current Routine</string>
    <string name="this_action_will_overwrite_your_chosen_routine_s_value">THIS ACTION WILL OVERWRITE YOUR CHOSEN ROUTINE\'S VALUE</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="pause">PAUSE</string>
    <string name="search_your_friend_here">Search Your Friend Here</string>
    <string name="go_make_some_friends">Go make some friends!</string>
    <string name="follow">Follow</string>
    <string name="before_getting_stared_here_is_a_few_things_you_might_need">Before getting stared, here is a few things you might need</string>
    <string name="show_me_how_this_works">show me how this works</string>
    <string name="done">done</string>
    <string name="logout">LOGOUT</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="routine">Routine</string>
    <string name="news_feed">News Feed</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="it_s_empty_here">It\'s empty here</string>
    <string name="edit_routine">edit routine</string>
    <string name="start_routine">Start routine</string>
    <string name="one_rm">% ONE-RM</string>
    <string name="rep">REP</string>
    <string name="choose_an_action">CHOOSE AN ACTION</string>
    <string name="take_a_photo">TAKE A PHOTO</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="where_do_you_want_to_save">WHERE DO YOU WANT TO SAVE?</string>
    <string name="to_my_library">TO MY LIBRARY</string>
    <string name="to_my_daily_routine">To My Daily routine</string>
    <string name="paused">PAUSED</string>
    <string name="that_didnt_work">That didn\'t work!</string>
    <string name="mins">mins</string>
    <string name="add_here">Add Here</string>
    <string name="cancel_copy">CANCEL COPY</string>
    <string name="resume">RESUME</string>
    <string name="unfollow">unfollow</string>
    <string name="get_ready_to_stay_focus">, get ready to stay #focus</string>

    <string-array name="type_array">
        <item>Not set</item>
        <item>Arms</item>
        <item>Abs</item>
        <item>Legs</item>
        <item>Shoulders</item>
        <item>Chest</item>
        <item>Back</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
