<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/copyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20sp"
        android:padding="20dp"
        android:fontFamily="@font/nunito"
        android:text="@string/where_do_you_want_to_save"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toMyLibrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/copyBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/to_my_library"
        app:icon="@drawable/ic_library"
        android:fontFamily="@font/nunito"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toRoutineBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toMyLibrBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/to_my_daily_routine"
        app:icon="@drawable/ic_toroutine"
        android:fontFamily="@font/nunito"
        />


</androidx.constraintlayout.widget.ConstraintLayout>