<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DailyRoutinesListFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/date_picker_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/mon"
                android:fontFamily="@font/nunito"
                app:layout_constraintWidth_percent="0.14"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@color/darkgrey"
                android:gravity="center_horizontal|center_vertical" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/mon"
                android:text="@string/tue"
                android:fontFamily="@font/nunito"
                app:layout_constraintRight_toLeftOf="@id/wed"
                android:textColor="@color/white"
                android:background="@color/darkgrey"
                android:textSize="15sp"
                android:gravity="center_horizontal|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tue"
                android:text="@string/wed"
                app:layout_constraintRight_toLeftOf="@id/thu"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito"
                android:background="@color/darkgrey"
                android:textSize="15sp"
                android:gravity="center_horizontal|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/wed"
                app:layout_constraintRight_toLeftOf="@id/fri"
                android:text="@string/thu"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito"
                android:background="@color/darkgrey"
                android:textSize="15sp"
                android:gravity="center_horizontal|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/thu"
                app:layout_constraintRight_toLeftOf="@id/sat"
                android:text="@string/fri"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito"
                android:background="@color/darkgrey"
                android:textSize="15sp"
                android:gravity="center_horizontal|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/fri"
                app:layout_constraintRight_toLeftOf="@id/sun"
                android:text="@string/sat"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito"
                android:background="@color/darkgrey"
                android:textSize="15sp"
                android:gravity="center_horizontal|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/sat"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/sun"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito"
                android:background="@color/darkgrey"
                android:textSize="15sp"
                android:gravity="center_horizontal|center_vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routine_recycler_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/date_picker_actions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHeight_percent="0.75"
        android:paddingTop="10dp"/>

   <LinearLayout
       android:id="@+id/emptyLayout"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:orientation="vertical"
       android:gravity="center"
       >

       <ImageView
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:src="@drawable/ic_box"
           android:scaleType="fitCenter"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/it_s_empty_here"
           android:textSize="30sp"
           android:fontFamily="@font/nunito"/>
   </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/edit_routine_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.3"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/edit_routine"
        android:textColor="@color/white"
        app:icon="@drawable/ic_modify"
        android:fontFamily="@font/nunito"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/start_workout_btn"
        app:layout_constraintTop_toBottomOf="@id/routine_recycler_list_view" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/start_workout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.3"
        android:backgroundTint="#1D9622"
        android:text="@string/start_routine"
        android:textColor="@color/white"
        app:icon="@drawable/ic_play"
        app:iconTint="@color/white"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/edit_routine_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routine_recycler_list_view" />

</androidx.constraintlayout.widget.ConstraintLayout>