<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoutineActivity">


    <RelativeLayout
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintHeight_percent="0.07"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/close_window"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/ic_close"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_your_routine"
            android:fontFamily="@font/nunito"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>


    <EditText
        android:id="@+id/newRoutineNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:textColor="@color/colorPrimary"
        android:hint="@string/new_routine_name"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/routine_recycler_list_view_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        android:autofillHints=""
        android:inputType="textShortMessage"
        android:maxLines="1"/>

    <RelativeLayout
        android:id="@+id/routine_recycler_list_view_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/newRoutineNameTextView"
        app:layout_constraintBottom_toTopOf="@id/exercisePickerContainer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/routine_recycler_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatingActionButton_addAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_add"
            android:text="@string/add"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:fabSize="auto"
            app:iconTint="@color/white"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:backgroundTint="#1D9622"
            app:fabCustomSize="70dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:icon="@drawable/ic_save_2"
            app:iconTint="@color/white" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/exercisePickerContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>